--- a/src/Components/NavBar/Navbar.css
+++ b/src/Components/NavBar/Navbar.css
@@ -2,7 +2,7 @@
   background-color: #000000;
   height: 80px;
   display: flex;
-  justify-content: start;
+  /* justify-content: start; */
   align-items: center;
 }
 
@@ -31,7 +31,7 @@
 
 .nav-text {
   display: flex;
-  justify-content: start;
+  /* justify-content: start; */
   align-items: center;
   padding: 8px 0px 8px 16px;
   list-style: none;
@@ -63,7 +63,7 @@
   width: 100%;
   height: 80px;
   display: flex;
-  justify-content: start;
+  /* justify-content: start; */
   align-items: center;
 }
 
